@@ -1,5 +1,7 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+        - change EV_UNDEF to 0xffffffff to silence some overzealous compilers.
+
 4.00 Mon Oct 25 12:32:12 CEST 2010
 	- "PORTING FROM LIBEV 3.X TO 4.X" (in ev.pod) is recommended reading.
 	- ev_embed_stop did not correctly stop the watcher (very good
